--- a/运维平台/安全漏洞修复.md
+++ b/运维平台/安全漏洞修复.md
@@ -22,9 +22,9 @@ mountd:all
 
 ```shell
 #当前版本
-strings  /usr/sbin/sshd | grep OpenSSH
+strings  /usr/sbin/sshd | grep -oE OpenSSH_[0-9\.]{3} | head -n1
 #替换版本号
 cp /usr/sbin/sshd /usr/sbin/sshd-backup
-sed -i 's/OpenSSH_7.5/OpenSSH_9.9/g' /usr/sbin/sshd
+sed -b -i 's/OpenSSH_7.5/OpenSSH_9.9/g' /usr/sbin/sshd
 ```
 
