--- a/运维平台/安全漏洞修复.md
+++ b/运维平台/安全漏洞修复.md
@@ -11,7 +11,7 @@
 vi /etc/hosts.allow
 mountd:192.168.1.10
 vi /etc/hosts.deny
-mountd:all   
+mountd:all
 ```
 
 ## SSHD相关
@@ -26,5 +26,18 @@ strings  /usr/sbin/sshd | grep -oE OpenSSH_[0-9\.]{3} | head -n1
 #替换版本号
 cp /usr/sbin/sshd /usr/sbin/sshd-backup
 sed -b -i 's/OpenSSH_7.5/OpenSSH_9.9/g' /usr/sbin/sshd
+```
+
+## SSL/TLS协议
+
+### CVE-2016-2183
+
+* Windows
+
+```shell
+
+#命令行输入gpedit
+#打开组策略-计算机配置-管理模板-网络-SSL配置设置-SSL密码套件顺序-【已启用】
+将默认的加密套件备份，删除IDEA、DES和3DES的算法后填在选项中
 ```
 
