--- a/虚拟化/虚拟化知识库.md
+++ b/虚拟化/虚拟化知识库.md
@@ -169,6 +169,101 @@ docker system df
 
 # Kubernetes
 
+## 网络插件
+
+### Calico
+
+#### 容器网络限速
+
+```shell
+#更改calico的配置
+kubectl edit cm calico-config -n kube-system
+#在plugins中添加如下内容：
+{ 
+  "type": "bandwidth",
+  "capabilities": {"bandwidth": true}
+}
+
+#完成配置
+
+# Please edit the object below. Lines beginning with a '#' will be ignored,
+# and an empty file will abort the edit. If an error occurs while saving this file will be
+# reopened with the relevant failures.
+#
+apiVersion: v1
+data:
+  calico_backend: bird
+  cni_network_config: |-
+    {
+      "name": "k8s-pod-network",
+      "cniVersion": "0.3.1",
+      "plugins": [
+        {
+          "type": "calico",
+          "log_level": "info",
+          "log_file_path": "/var/log/calico/cni/cni.log",
+          "etcd_endpoints": "__ETCD_ENDPOINTS__",
+          "etcd_key_file": "__ETCD_KEY_FILE__",
+          "etcd_cert_file": "__ETCD_CERT_FILE__",
+          "etcd_ca_cert_file": "__ETCD_CA_CERT_FILE__",
+          "mtu": __CNI_MTU__,
+          "ipam": {
+              "type": "calico-ipam"
+          },
+          "policy": {
+              "type": "k8s"
+          },
+          "kubernetes": {
+              "kubeconfig": "__KUBECONFIG_FILEPATH__"
+          }
+        },
+        {
+          "type": "portmap",
+          "snat": true,
+          "capabilities": {"portMappings": true}
+        },
+        {
+          "type": "bandwidth",
+          "capabilities": {"bandwidth": true}
+        }
+      ]
+    }
+  etcd_ca: /calico-secrets/etcd-ca
+  etcd_cert: /calico-secrets/etcd-cert
+  etcd_endpoints: https://172.26.67.11:2379,https://172.26.67.12:2379,https://172.26.67.13:2379
+  etcd_key: /calico-secrets/etcd-key
+  typha_service_name: none
+  veth_mtu: "1440"
+kind: ConfigMap
+metadata:
+  name: calico-config
+  namespace: kube-system
+  
+###重启一下calico-node
+kubectl delete pod -n kube-system -l k8s-app=calico-node
+
+###创建pod
+apiVersion: v1
+kind: Pod
+metadata:
+  name: nginx
+  annotations:
+    kubernetes.io/ingress-bandwidth: 20M
+    kubernetes.io/egress-bandwidth: 20M
+spec:
+  containers:
+  - name: nginx
+    image: nginx:1.17.10
+    
+#然后在Pod所在的节点上，执行以下命令，查看是否有qdisc规则
+tc qdisc show 
+qdisc tbf 1: dev calic440f455693 root refcnt 2 rate 20Mbit burst 256Mb lat 25.0ms 
+qdisc ingress ffff: dev calic440f455693 parent ffff:fff1 ---------------- 
+qdisc tbf 1: dev 79c7 root refcnt 2 rate 20Mbit burst 256Mb lat 25.0ms
+```
+
+
+
 ## 亲和性
 
 > **nodeAffinity**节点亲和性
