--- a/虚拟化/虚拟化知识库.md
+++ b/虚拟化/虚拟化知识库.md
@@ -70,6 +70,43 @@ virt-customize -a /data/moban1.qcow2 --root-password password:Zonecd@2019
 
 # Docker
 
+## 常用命令
+
+### 基础命令
+
+```shell
+#拉取一个镜像
+docker pull images_name
+#导出镜像
+docker save -o image_name.tar image_name
+#删除镜像
+docker rmi image_name
+#启动一个容器
+docker run hello-world
+docker run -it --name=con_name images
+docker run --name=con_name -p 10001:8080 images
+```
+
+
+
+### 清理空间
+
+```shell
+#删除所有已经停止的容器
+#注意：要先确认停止的容器中是否有不可以删除的，也可以删除后使用镜像再启一个容器。
+docker rm $(docker ps -a|grep Exited |awk '{print $1}')
+docker rm $(docker ps -qf status=exited)
+```
+
+```shell
+#删除所有未打标签的镜像
+docker rmi $(docker images -q -f dangling=true)
+#删除所有不再使用的镜像
+docker image prune -a
+```
+
+
+
 ## 网络代理
 
 ### Dockerd 代理
@@ -163,6 +200,23 @@ docker image prune -a
 docker container prune -a
 docker system prune
 docker system df
+```
+
+## 跨主机通信
+
+### macvlan实现
+
+```shell
+#需要linux内核支持3.9+,两台机器设置使用桥接模式,网卡混杂模式开启全部允许
+docker network create --driver macvlan --subnet=192.168.0.0/24 --gateway=192.168.0.254 -o parent=eth0 macvlan_1
+
+#1. -o parent=eth0  绑定到eth0网卡上(对外的网卡)
+#2. macvlan_1为自定义的该通道的名字
+#3. 创建完成后docker network ls就能看到创建的这个网络了
+#4. 以上创建macvlan的命令在两台主机上都要执行
+# 分别在两台主机上执行以下命令
+docker run -it --network macvlan_1 --ip=192.168.0.10 centos:centos7 /bin/bash 
+docker run -it --network macvlan_1 --ip=192.168.0.20 centos:centos7 /bin/bash 
 ```
 
 
