--- a/虚拟化/虚拟化知识库.md
+++ b/虚拟化/虚拟化知识库.md
@@ -405,3 +405,43 @@ affinity:
         topologyKey: "kubernetes.io/hostname"
 ```
 
+# VirtualBox
+
+## 问题处理
+
+### 7.0.20 版本安装路径
+
+> 新版本只能安装到C盘，需要创建好安装的目录，使用CMD执行以下命令。
+
+```cmd
+icacls "D:\VirtualBox" /reset /t /c
+icacls "D:\VirtualBox" /inheritance:d /t /c
+icacls "D:\VirtualBox" /grant *S-1-5-32-545:(OI)(CI)(RX)
+icacls "D:\VirtualBox" /deny *S-1-5-32-545:(DE,WD,AD,WEA,WA)
+icacls "D:\VirtualBox" /grant *S-1-5-11:(OI)(CI)(RX)
+icacls "D:\VirtualBox" /deny *S-1-5-11:(DE,WD,AD,WEA,WA)
+```
+
+### 鼠标不会动
+
+> 需要安装/Oracle_VM_VirtualBox_Extension_Pack扩展包
+
+<img src="images/VirtualBox-1.png" alt="安装扩展包" style="zoom:50%;" />
+
+
+
+<img src="images/VirtualBox-2.jpg" alt="选择usb3.0" style="zoom:70%;" />
+
+### MAC安装
+
+> 需要进入软件根目录，执行以下命令才能正常引导，注意替换虚拟机名称。
+
+```cmd
+VBoxManage.exe modifyvm "Mac-10.14" --cpuidset 00000001 000106e5 00100800 0098e3fd bfebfbff
+VBoxManage setextradata "Mac-10.14" "VBoxInternal/Devices/efi/0/Config/DmiSystemProduct" "iMAC11,3"
+VBoxManage setextradata "Mac-10.14" "VBoxInternal/Devices/efi/0/Config/DmiSystemVersion" "1.0"
+VBoxManage setextradata "Mac-10.14" "VBoxInternal/Devices/efi/0/Config/DmiBoardProduct" "Iloveapple"
+VBoxManage setextradata "Mac-10.14" "VBoxInternal/Devices/smc/0/Config/DeviceKey" "ourhardworkbythesewordsguardedpleasedontsteal(c)AppleComputerInc"
+VBoxManage setextradata "Mac-10.14" "VBoxInternal/Devices/smc/0/Config/GetKeyFromRealSMC" 1
+```
+
