--- a/虚拟化/虚拟化知识库.md
+++ b/虚拟化/虚拟化知识库.md
@@ -103,6 +103,7 @@ docker rm $(docker ps -qf status=exited)
 docker rmi $(docker images -q -f dangling=true)
 #删除所有不再使用的镜像
 docker image prune -a
+docker system prune -a
 ```
 
 
@@ -405,6 +406,37 @@ affinity:
         topologyKey: "kubernetes.io/hostname"
 ```
 
+## 监控数据缺失
+
+### systemd CPUSet特性
+
+> 对于OpenEuler2203 sp2 开启了systemd-249-46之后资源组cpuset特性的服务器，具体补丁为core-cgroup-support-cpuset.patch，默认的配置采集容器内存和cpu数据会失败，有如下日志。
+
+```shell
+Jan 15 17:31:07 app-k8s-master-1 kubelet[15131]: E0115container.go:586] Failed to update stats for container "/system.slice/kubelet.service":/sys/fs/cgroup/cpuset/system.slice/kubelet.service/cpuset.cpus found to be empty, continuing to push stats
+Jan 15 17:31:16 app-k8s-master-1 kubelet[15131]: W0115 17:31:16.597521   15131 container.go:586] Failed to update stats for container "/system.slice/docker.service": /sys/fs/cgroup/cpuset/system.slice/docker.service/cpuset.cpus found to be empty, continuing to push stats
+Jan 15 17:31:17 app-k8s-master-1 kubelet[15131]: E0115 17:31:17.050047   15131 cadvisor_stats_provider.go:415] "Partial failure issuing cadvisor.ContainerInfoV2" err="partial failures: [\"/system.slice/docker.service\": RecentStats: unable to find data in memory cache], [\"/system.slice/kubelet.service\": RecentStats: unable to find data in memory cache]"
+Jan 15 17:31:17 app-k8s-master-1 kubelet[15131]: E0115 17:31:17.053461   15131 summary_sys_containers.go:47] "Failed to get system container stats" err="failed to get cgroup stats for \"/system.slice/kubelet.service\": failed to get container info for \"/system.slice/kubelet.service\": partial failures: [\"/system.slice/kubelet.service\": RecentStats: unable to find data in memory cache]" containerName="/system.slice/kubelet.service"
+Jan 15 17:31:17 app-k8s-master-1 kubelet[15131]: E0115 17:31:17.053493   15131 summary_sys_containers.go:47] "Failed to get system container stats" err="failed to get cgroup stats for \"/system.slice/docker.service\": failed to get container info for \"/system.slice/docker.service\": partial failures: [\"/system.slice/docker.service\": RecentStats: unable to find data in memory cache]" containerName="/system.slice/docker.service"
+```
+
+> 需要给服务配置CPUSetCpu、CPUSetMems参数，然后重启服务。
+
+```shell
+systemctl set-property system.slice CPUSetCpus=all
+systemctl set-property docker.service CPUSetCpus=all
+systemctl set-property kubelet.service CPUSetCpus=all
+systemctl set-property kubepods-besteffort.slice CPUSetCpus=all
+systemctl set-property system.slice CPUSetMems=all
+systemctl set-property docker.service CPUSetMems=all
+systemctl set-property kubelet.service CPUSetMems=all
+systemctl set-property kubepods-besteffort.slice CPUSetMems=all
+```
+
+>或者修改systemd的默认配置使cpuset生效,在/etc/systemd/system.conf中设置 "DefaultCpusetAccounting=yes"后重启服务器生效。
+
+
+
 # VirtualBox
 
 ## 问题处理
@@ -441,6 +473,17 @@ VBoxManage.exe modifyvm "Mac-10.14" --cpuidset 00000001 000106e5 00100800 0098e3
 VBoxManage setextradata "Mac-10.14" "VBoxInternal/Devices/efi/0/Config/DmiSystemProduct" "iMAC11,3"
 VBoxManage setextradata "Mac-10.14" "VBoxInternal/Devices/efi/0/Config/DmiSystemVersion" "1.0"
 VBoxManage setextradata "Mac-10.14" "VBoxInternal/Devices/efi/0/Config/DmiBoardProduct" "Iloveapple"
+VBoxManage setextradata "Mac-10.14" "VBoxInternal/Devices/smc/0/Config/DeviceKey" "ourhardworkbythesewordsguardedpleasedontsteal(c)AppleComputerInc"
+VBoxManage setextradata "Mac-10.14" "VBoxInternal/Devices/smc/0/Config/GetKeyFromRealSMC" 1
+```
+
+#### 10.14.6安装
+
+```shell
+VBoxManage.exe modifyvm "Mac-10.14" --cpuidset 00000001 000106e5 00100800 0098e3fd bfebfbff
+VBoxManage setextradata "Mac-10.14" "VBoxInternal/Devices/efi/0/Config/DmiSystemProduct" "iMac19,1"
+VBoxManage setextradata "Mac-10.14" "VBoxInternal/Devices/efi/0/Config/DmiSystemVersion" "1.0"
+VBoxManage setextradata "Mac-10.14" "VBoxInternal/Devices/efi/0/Config/DmiBoardProduct" "Mac-AA95B1DDAB278B95"
 VBoxManage setextradata "Mac-10.14" "VBoxInternal/Devices/smc/0/Config/DeviceKey" "ourhardworkbythesewordsguardedpleasedontsteal(c)AppleComputerInc"
 VBoxManage setextradata "Mac-10.14" "VBoxInternal/Devices/smc/0/Config/GetKeyFromRealSMC" 1
 ```
