--- a/运维平台/安全漏洞修复.md
+++ b/运维平台/安全漏洞修复.md
@@ -35,9 +35,14 @@ sed -b -i 's/OpenSSH_7.5/OpenSSH_9.9/g' /usr/sbin/sshd
 * Windows
 
 ```shell
-
-#命令行输入gpedit
+#命令行输入gpedit.msc
 #打开组策略-计算机配置-管理模板-网络-SSL配置设置-SSL密码套件顺序-【已启用】
-将默认的加密套件备份，删除IDEA、DES和3DES的算法后填在选项中
+将默认的加密套件备份，删除IDEA、DES和3DES的算法后填在选项中，注意将、替换为,
+
+##生效配置cmd运行
+gpupdate/force
+
+#使用nmap检测
+nmap -p 3389 --script ssl-enum-ciphers localhost
 ```
 
