--- a/运维平台/安全漏洞修复.md
+++ b/运维平台/安全漏洞修复.md
@@ -23,9 +23,12 @@ mountd:all
 ```shell
 #当前版本
 strings  /usr/sbin/sshd | grep -oE OpenSSH_[0-9\.]{3} | head -n1
-#替换版本号
+#替换版本号,需要注意替换前后字符数量要一致。
 cp /usr/sbin/sshd /usr/sbin/sshd-backup
+#伪装为高版本
 sed -b -i 's/OpenSSH_7.5/OpenSSH_9.9/g' /usr/sbin/sshd
+#伪装为其他ssh
+sed -b -i 's/OpenSSH_7.5/OtherSSH1.0/g' /usr/sbin/sshd
 ```
 
 ## SSL/TLS协议
