--- a/运维平台/安全漏洞修复.md
+++ b/运维平台/安全漏洞修复.md
@@ -31,6 +31,18 @@ sed -b -i 's/OpenSSH_7.5/OpenSSH_9.9/g' /usr/sbin/sshd
 sed -b -i 's/OpenSSH_7.5/OtherSSH1.0/g' /usr/sbin/sshd
 ```
 
+> 目标主机SSH服务存在RC4、CBC或None弱加密算法
+
+```shell
+#/etc/ssh/sshd_config 移除或禁用所有弱加密算法,添加如下配置
+Ciphers aes256-ctr,aes192-ctr,aes128-ctr
+MACs hmac-sha2-512,hmac-sha2-256
+KexAlgorithms diffie-hellman-group-exchange-sha256
+
+```
+
+
+
 ## SSL/TLS协议
 
 ### CVE-2016-2183
