--- a/运维平台/安全漏洞修复.md
+++ b/运维平台/安全漏洞修复.md
@@ -47,7 +47,7 @@ KexAlgorithms diffie-hellman-group-exchange-sha256
 
 ### CVE-2016-2183
 
-* Windows
+#### Windows
 
 ```shell
 #命令行输入gpedit.msc
@@ -59,5 +59,322 @@ gpupdate/force
 
 #使用nmap检测
 nmap -p 3389 --script ssl-enum-ciphers localhost
+```
+
+#### haproxy
+
+```shell
+#检查版本是否在2.4以上，如果不是进行升级
+[root@k8s-master1 ~]# yum update haproxy
+[root@k8s-master1 ~]# haproxy -vv
+HAProxy version 2.4.8-d1f8d41 2021/11/03 - https://haproxy.org/
+Status: long-term supported branch - will stop receiving fixes around Q2 2026.
+Known bugs: http://www.haproxy.org/bugs/bugs-2.4.8.html
+Running on: Linux 5.10.0-60.18.0.50.oe2203.x86_64 #1 SMP Wed Mar 30 03:12:24 UTC 2022 x86_64
+Build options :
+  TARGET  = linux-glibc
+  CPU     = generic
+  CC      = cc
+  CFLAGS  = -O2 -g -Wall -Wextra -Wdeclaration-after-statement -fwrapv -Wno-address-of-packed-member -Wno-unused-label -Wno-sign-compare -Wno-unused-parameter -Wno-clobbered -Wno-missing-field-initializers -Wno-cast-function-type -Wtype-limits -Wshift-negative-value -Wshift-overflow=2 -Wduplicated-cond -Wnull-dereference -DMAX_SESS_STKCTR=12
+  OPTIONS = USE_PCRE2=1 USE_LINUX_TPROXY=1 USE_CRYPT_H=1 USE_GETADDRINFO=1 USE_OPENSSL=1 USE_LUA=1 USE_SLZ=1 USE_SYSTEMD=1 USE_PROMEX=1
+  DEBUG   = 
+
+Feature list : +EPOLL -KQUEUE +NETFILTER -PCRE -PCRE_JIT +PCRE2 -PCRE2_JIT +POLL -PRIVATE_CACHE +THREAD -PTHREAD_PSHARED +BACKTRACE -STATIC_PCRE -STATIC_PCRE2 +TPROXY +LINUX_TPROXY +LINUX_SPLICE +LIBCRYPT +CRYPT_H +GETADDRINFO +OPENSSL +LUA +FUTEX +ACCEPT4 -CLOSEFROM -ZLIB +SLZ +CPU_AFFINITY +TFO +NS +DL +RT -DEVICEATLAS -51DEGREES -WURFL +SYSTEMD -OBSOLETE_LINKER +PRCTL -PROCCTL +THREAD_DUMP -EVPORTS -OT -QUIC +PROMEX -MEMORY_PROFILING
+
+Default settings :
+  bufsize = 16384, maxrewrite = 1024, maxpollevents = 200
+
+Built with multi-threading support (MAX_THREADS=64, default=4).
+Built with OpenSSL version : OpenSSL 1.1.1m  14 Dec 2021
+Running on OpenSSL version : OpenSSL 1.1.1m  14 Dec 2021
+OpenSSL library supports TLS extensions : yes
+OpenSSL library supports SNI : yes
+OpenSSL library supports : TLSv1.0 TLSv1.1 TLSv1.2 TLSv1.3
+Built with Lua version : Lua 5.4.3
+Built with the Prometheus exporter as a service
+Built with network namespace support.
+Built with libslz for stateless compression.
+Compression algorithms supported : identity("identity"), deflate("deflate"), raw-deflate("deflate"), gzip("gzip")
+Built with transparent proxy support using: IP_TRANSPARENT IPV6_TRANSPARENT IP_FREEBIND
+Built with PCRE2 version : 10.39 2021-10-29
+PCRE2 library supports JIT : no (USE_PCRE2_JIT not set)
+Encrypted password support via crypt(3): yes
+Built with gcc compiler version 10.3.1
+
+Available polling systems :
+      epoll : pref=300,  test result OK
+       poll : pref=200,  test result OK
+     select : pref=150,  test result OK
+Total: 3 (3 usable), will use epoll.
+
+Available multiplexer protocols :
+(protocols marked as <default> cannot be specified using 'proto' keyword)
+              h2 : mode=HTTP       side=FE|BE     mux=H2       flags=HTX|CLEAN_ABRT|HOL_RISK|NO_UPG
+            fcgi : mode=HTTP       side=BE        mux=FCGI     flags=HTX|HOL_RISK|NO_UPG
+       <default> : mode=HTTP       side=FE|BE     mux=H1       flags=HTX
+              h1 : mode=HTTP       side=FE|BE     mux=H1       flags=HTX|NO_UPG
+       <default> : mode=TCP        side=FE|BE     mux=PASS     flags=
+            none : mode=TCP        side=FE|BE     mux=PASS     flags=NO_UPG
+
+Available services : prometheus-exporter
+Available filters :
+	[SPOE] spoe
+	[CACHE] cache
+	[FCGI] fcgi-app
+	[COMP] compression
+	[TRACE] trace
+```
+
+> 修改配置，禁用3des加密算法：
+
+```shell
+[root@k8s-master1 ~]# vi /etc/haproxy/haproxy.cfg 
+global
+#增加如下内容：
+  ssl-default-bind-options no-sslv3 no-tlsv10
+  ssl-default-bind-ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:RSA+AESGCM:RSA+AES:!aNULL:!MD5:!DSS
+  ssl-default-server-options no-sslv3 no-tlsv10
+  ssl-default-server-ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:RSA+AESGCM:RSA+AES:!aNULL:!MD5:!DSS
+  tune.ssl.default-dh-param 2048
+  #此处截止
+  daemon
+  maxconn  4096
+  ulimit-n  16384
+  log  127.0.0.1 local0 err
+  stats timeout 30s
+
+defaults
+  log global
+  mode http
+  option httplog
+  timeout connect  5000
+  timeout client  50000
+  timeout server  50000
+  timeout http-request  15s
+  timeout http-keep-alive 15s
+
+frontend monitor-in
+  bind *:33305
+  mode http
+  option httplog
+  monitor-uri /monitor
+
+listen stats
+  bind    *:8006
+  mode    http
+  stats   enable
+  stats   hide-version
+  stats   uri    /stats
+  stats   refresh   30s
+  stats   realm    Haproxy\ Statistics
+  stats   auth    admin:adminyyy
+
+frontend k8s-api
+  bind 0.0.0.0:7443
+  bind 127.0.0.1:7443
+  mode tcp
+  option tcplog
+  tcp-request inspect-delay 5s
+  default_backend k8s-api
+
+backend k8s-api
+  mode tcp
+  option tcplog
+  option tcp-check
+  balance roundrobin
+  default-server inter 10s downinter 5s rise 2 fall 2 slowstart 60s maxconn 250 maxqueue 256 weight 100
+server k8s-api-10.255.90.2      10.255.90.2:6443  check
+server k8s-api-10.255.90.3      10.255.90.3:6443  check
+server k8s-api-10.255.90.4      10.255.90.4:6443  check
+```
+
+修改后重启haproxy：
+
+```
+systemctl restart haproxy
+systemctl status haproxy
+```
+
+#### etcd
+
+修改配置文件：
+
+```bash
+[root@k8s-master1 ~]# vi /etc/etcd/etcd.config.yml 
+name: 'k8s-master1'
+data-dir: /var/lib/etcd
+wal-dir: /var/lib/etcd/wal
+snapshot-count: 5000
+heartbeat-interval: 100
+election-timeout: 1000
+quota-backend-bytes: 0
+listen-peer-urls: 'https://10.255.90.2:2380'
+listen-client-urls: 'https://10.255.90.2:2379,http://127.0.0.1:2379'
+max-snapshots: 3
+max-wals: 5
+cors:
+initial-advertise-peer-urls: 'https://10.255.90.2:2380'
+advertise-client-urls: 'https://10.255.90.2:2379'
+discovery:
+discovery-fallback: 'proxy'
+discovery-proxy:
+discovery-srv:
+initial-cluster: 'k8s-master1=https://10.255.90.2:2380,k8s-master2=https://10.255.90.3:2380,k8s-master3=https://10.255.90.4:2380'
+initial-cluster-token: 'etcd-k8s-cluster'
+initial-cluster-state: 'new'
+strict-reconfig-check: false
+enable-v2: true
+enable-pprof: true
+proxy: 'off'
+proxy-failure-wait: 5000
+proxy-refresh-interval: 30000
+proxy-dial-timeout: 1000
+proxy-write-timeout: 5000
+proxy-read-timeout: 0
+client-transport-security:
+  ca-file: '/etc/kubernetes/pki/etcd/ca.crt'
+  cert-file: '/etc/kubernetes/pki/etcd/server.crt'
+  key-file: '/etc/kubernetes/pki/etcd/server.key'
+  client-cert-auth: true
+  trusted-ca-file: '/etc/kubernetes/pki/etcd/ca.crt'
+  auto-tls: true
+peer-transport-security:
+  ca-file: '/etc/kubernetes/pki/etcd/ca.crt'
+  cert-file: '/etc/kubernetes/pki/etcd/peer.crt'
+  key-file: '/etc/kubernetes/pki/etcd/peer.key'
+  peer-client-cert-auth: true
+  trusted-ca-file: '/etc/kubernetes/pki/etcd/ca.crt'
+  auto-tls: true
+debug: false
+log-package-levels:
+log-output: default
+force-new-cluster: false
+#增加如下内容：
+cipher-suites: [TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA,TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA,TLS_RSA_WITH_AES_128_GCM_SHA256,TLS_RSA_WITH_AES_256_GCM_SHA384,TLS_RSA_WITH_AES_128_CBC_SHA,TLS_RSA_WITH_AES_256_CBC_SHA]
+```
+
+修改后重启etcd服务：
+
+```
+systemctl restart etcd
+systemctl status etcd
+```
+
+#### kubelet
+
+修改kubelet.service，增加--tls-cipher-suites：
+
+```bash
+[root@k8s-master1 ~]# vi /usr/lib/systemd/system/kubelet.service
+[Unit]
+Description=Kubernetes Kubelet
+Documentation=https://github.com/kubernetes/kubernetes
+After=docker.service
+Requires=docker.service
+
+[Service]
+ExecStart=/usr/local/bin/kubelet --bootstrap-kubeconfig=/etc/kubernetes/bootstrap.kubeconfig --kubeconfig=/etc/kubernetes/kubelet.kubeconfig --config=/etc/kubernetes/kubelet-conf.yml --pod-infra-container-image=k8s.gcr.io/pause:3.1 --network-plugin=cni --cni-conf-dir=/etc/cni/net.d --cni-bin-dir=/opt/cni/bin --cert-dir=/etc/kubernetes/pki --cgroup-driver=systemd --v=2 --tls-cipher-suites=TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305_SHA256,TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA,TLS_RSA_WITH_AES_128_CBC_SHA,TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA,TLS_RSA_WITH_AES_128_GCM_SHA256,TLS_RSA_WITH_AES_256_CBC_SHA,TLS_RSA_WITH_AES_256_GCM_SHA384
+
+Restart=always
+RestartSec=10s
+
+[Install]
+WantedBy=multi-user.target
+```
+
+修改后重启服务：
+
+```
+systemctl daemon-reload
+systemctl restart kubelet.service
+systemctl status kubelet.service
+```
+
+#### kube-apiserver
+
+修改kube-apiserver.service，增加--tls-cipher-suites:
+
+```bash
+[root@k8s-master1 ~]# vi /usr/lib/systemd/system/kube-apiserver.service
+[Unit]
+Description=Kubernetes API Server
+Documentation=https:/github.com/kubernetes/kubernetes
+After=network.target
+
+[Service]
+ExecStart=/usr/local/bin/kube-apiserver --authorization-mode=Node,RBAC --enable-admission-plugins=NamespaceLifecycle,LimitRanger,ServiceAccount,PersistentVolumeClaimResize,DefaultStorageClass,DefaultTolerationSeconds,NodeRestriction,MutatingAdmissionWebhook,ValidatingAdmissionWebhook,ResourceQuota,Priority --advertise-address=0.0.0.0 --bind-address=0.0.0.0 --insecure-port=0 --secure-port=6443 --allow-privileged=true --enable-swagger-ui=true --storage-backend=etcd3 --event-ttl=1h --apiserver-count=3 --runtime-config=api/all=true --audit-log-maxage=30 --audit-log-maxbackup=3 --audit-log-maxsize=100 --audit-log-path=/var/log/audit.log --enable-bootstrap-token-auth --etcd-servers=https://10.255.90.2:2379,https://10.255.90.3:2379,https://10.255.90.4:2379 --etcd-cafile=/etc/kubernetes/pki/etcd/ca.crt --etcd-certfile=/etc/kubernetes/pki/apiserver-etcd-client.crt --etcd-keyfile=/etc/kubernetes/pki/apiserver-etcd-client.key --client-ca-file=/etc/kubernetes/pki/ca.crt --kubelet-client-certificate=/etc/kubernetes/pki/apiserver-kubelet-client.crt --kubelet-client-key=/etc/kubernetes/pki/apiserver-kubelet-client.key --kubelet-preferred-address-types=InternalIP,ExternalIP,Hostname --service-cluster-ip-range=10.96.0.0/12 --service-node-port-range=30000-52000 --service-account-issuer=api --service-account-signing-key-file=/etc/kubernetes/pki/sa.key --service-account-key-file=/etc/kubernetes/pki/sa.pub --tls-cert-file=/etc/kubernetes/pki/apiserver.crt --tls-private-key-file=/etc/kubernetes/pki/apiserver.key --requestheader-client-ca-file=/etc/kubernetes/pki/front-proxy-ca.crt --requestheader-username-headers=X-Remote-User --requestheader-group-headers=X-Remote-Group --requestheader-allowed-names=front-proxy-client --requestheader-extra-headers-prefix=X-Remote-Extra- --proxy-client-cert-file=/etc/kubernetes/pki/front-proxy-client.crt --proxy-client-key-file=/etc/kubernetes/pki/front-proxy-client.key --feature-gates=RemoveSelfLink=false --v=2 --tls-cipher-suites=TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305_SHA256,TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA,TLS_RSA_WITH_AES_128_CBC_SHA,TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA,TLS_RSA_WITH_AES_128_GCM_SHA256,TLS_RSA_WITH_AES_256_CBC_SHA,TLS_RSA_WITH_AES_256_GCM_SHA384
+
+Restart=on-failure
+RestartSec=10s
+LimitNOFILE=65535
+
+[Install]
+WantedBy=multi-user.target
+```
+
+修改后重启服务：
+
+```
+systemctl daemon-reload
+systemctl restart kube-apiserver.service
+systemctl status kube-apiserver.service
+```
+
+#### kube-controller-manager
+
+修改kube-controller-manager.service，增加--tls-cipher-suites:
+
+```bash
+[root@k8s-master1 ~]# vi /usr/lib/systemd/system/kube-controller-manager.service 
+[Unit]
+Description=Kubernetes Controller Manager
+Documentation=https://github.com/kubernetes/kubernetes
+After=network.target
+
+[Service]
+ExecStart=/usr/local/bin/kube-controller-manager --bind-address=0.0.0.0 --leader-elect=true --allocate-node-cidrs=true --kubeconfig=/etc/kubernetes/controller-manager.kubeconfig --authentication-kubeconfig=/etc/kubernetes/controller-manager.kubeconfig --authorization-kubeconfig=/etc/kubernetes/controller-manager.kubeconfig --client-ca-file=/etc/kubernetes/pki/ca.crt --cluster-signing-cert-file=/etc/kubernetes/pki/ca.crt --cluster-signing-key-file=/etc/kubernetes/pki/ca.key --cluster-cidr=10.244.0.0/16 --service-cluster-ip-range=10.96.0.0/12 --requestheader-client-ca-file=/etc/kubernetes/pki/front-proxy-ca.crt --service-account-private-key-file=/etc/kubernetes/pki/sa.key --root-ca-file=/etc/kubernetes/pki/ca.crt --use-service-account-credentials=true --controllers=*,bootstrapsigner,tokencleaner --experimental-cluster-signing-duration=86700h --v=2 --tls-cipher-suites=TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305_SHA256,TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA,TLS_RSA_WITH_AES_128_CBC_SHA,TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA,TLS_RSA_WITH_AES_128_GCM_SHA256,TLS_RSA_WITH_AES_256_CBC_SHA,TLS_RSA_WITH_AES_256_GCM_SHA384
+
+Restart=always
+RestartSec=10s
+
+[Install]
+WantedBy=multi-user.target
+```
+
+修改后重启服务：
+
+```
+systemctl daemon-reload
+systemctl restart kube-controller-manager.service
+systemctl status kube-controller-manager.service
+```
+
+#### kube-scheduler
+
+修改kube-scheduler.service，增加--tls-cipher-suites:
+
+```bash
+[root@k8s-master1 ~]# vi /usr/lib/systemd/system/kube-scheduler.service
+[Unit]
+Description=Kubernetes Scheduler
+Documentation=https://github.com/kubernetes/kubernetes
+After=network.target
+
+[Service]
+ExecStart=/usr/local/bin/kube-scheduler --leader-elect=true --kubeconfig=/etc/kubernetes/scheduler.kubeconfig --address=0.0.0.0 --v=2 --tls-cipher-suites=TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305_SHA256,TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA,TLS_RSA_WITH_AES_128_CBC_SHA,TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA,TLS_RSA_WITH_AES_128_GCM_SHA256,TLS_RSA_WITH_AES_256_CBC_SHA,TLS_RSA_WITH_AES_256_GCM_SHA384
+
+Restart=always
+RestartSec=10s
+
+[Install]
+WantedBy=multi-user.target
+```
+
+修改后重启服务：
+
+```
+systemctl daemon-reload
+systemctl restart kube-scheduler.service
+systemctl status kube-scheduler.service
 ```
 
