更新知识库

--- a/虚拟化/虚拟化知识库.md
+++ b/虚拟化/虚拟化知识库.md
@@ -481,10 +481,11 @@ VBoxManage setextradata "Mac-10.14" "VBoxInternal/Devices/smc/0/Config/GetKeyFro
 
 ```shell
 VBoxManage.exe modifyvm "Mac-10.14" --cpuidset 00000001 000106e5 00100800 0098e3fd bfebfbff
-VBoxManage setextradata "Mac-10.14" "VBoxInternal/Devices/efi/0/Config/DmiSystemProduct" "iMac19,1"
+VBoxManage setextradata "Mac-10.14" "VBoxInternal/Devices/efi/0/Config/DmiSystemProduct" "iMac14,2"
 VBoxManage setextradata "Mac-10.14" "VBoxInternal/Devices/efi/0/Config/DmiSystemVersion" "1.0"
-VBoxManage setextradata "Mac-10.14" "VBoxInternal/Devices/efi/0/Config/DmiBoardProduct" "Mac-AA95B1DDAB278B95"
+VBoxManage setextradata "Mac-10.14" "VBoxInternal/Devices/efi/0/Config/DmiBoardProduct" "Mac-27ADBB7B4CEE8E61"
 VBoxManage setextradata "Mac-10.14" "VBoxInternal/Devices/smc/0/Config/DeviceKey" "ourhardworkbythesewordsguardedpleasedontsteal(c)AppleComputerInc"
 VBoxManage setextradata "Mac-10.14" "VBoxInternal/Devices/smc/0/Config/GetKeyFromRealSMC" 1
+VBoxManage setextradata "Mac-10.14" "VBoxInternal/Devices/efi/0/Config/DmiSystemSerial" "C02K7N4P8M2"
 ```
 
